# koas

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: release.yml
.moon/: toolchain.yml  workspace.yml
.moon/cache/states/: projectsBuildDataV1.json  workspaceGraph.json
apps/api/: Cargo.toml  moon.yml
apps/api/src/application/: mod.rs
apps/api/src/application/machine/: mod.rs
apps/api/src/application/service/: mod.rs
apps/api/src/application/system/: info.rs  mod.rs
apps/api/src/domain/: error.rs  mod.rs
apps/api/src/domain/machine/: mod.rs  repository.rs  types.rs
apps/api/src/domain/service/: mod.rs  repository.rs  types.rs
apps/api/src/domain/system/: mod.rs  types.rs
apps/api/src/infrastructure/: mod.rs
apps/api/src/infrastructure/auth/: mod.rs
apps/api/src/infrastructure/config/: mod.rs
apps/api/src/infrastructure/machine/: mod.rs  repository.rs
apps/api/src/infrastructure/os/: detector.rs  mod.rs
apps/api/src/infrastructure/service/: manager.rs  mod.rs
apps/api/src/infrastructure/ssh/: auth.rs  mod.rs  session.rs  types.rs
apps/api/src/presentation/: error.rs  list_params.rs  mod.rs
apps/api/src/presentation/middleware/: auth.rs  mod.rs
apps/api/src/presentation/routers/: health.rs  machines.rs  mod.rs  packages.rs  system.rs
apps/gateway/: Cargo.toml  moon.yml
apps/gateway/src/: app.rs  main.rs  state.rs
apps/installer/: Cargo.toml  moon.yml
apps/installer/src/: main.rs
apps/web/: index.html  moon.yml  package.json  tsr.config.json  vite.config.ts
apps/web/src/: index.css  main.tsx  router.tsx
apps/web/src/apis/: client.ts  index.ts
apps/web/src/components/layout/: AppLayout.tsx  app-layout.tsx
apps/web/src/components/ui/: Badge.tsx  BarChart.tsx  Button.tsx  DataTable.tsx  TimeTracker.tsx  avatar.tsx  card.tsx  data-table.tsx  index.ts  progress-gauge.tsx  search-input.tsx  stat-card.tsx
apps/web/src/libs/api/: client.ts
apps/web/src/libs/list/: index.ts
apps/web/src/routes/: _app.tsx  dashboard.tsx  login.tsx  machines.new.tsx  machines.tsx  packages.tsx  services.$name.tsx  services.tsx
apps/web/src/routes/_app/_apis/: system.ts
apps/web/src/routes/_app/dashboard/: index.tsx
apps/web/src/routes/_app/dashboard/_apis/: index.ts
apps/web/src/routes/_app/machines/: index.tsx  new.tsx
apps/web/src/routes/_app/machines/_apis/: index.ts
apps/web/src/routes/_app/services/: $name.tsx  index.tsx
apps/web/src/routes/_app/services/_apis/: index.ts
apps/web/src/routes/dashboard/_apis/: index.ts
apps/web/src/routes/login/: index.tsx
apps/web/src/routes/login/_apis/: index.ts
apps/web/src/routes/machines/_apis/: index.ts
apps/web/src/routes/services.$name/_apis/: index.ts
apps/web/src/routes/services/_apis/: index.ts
apps/web/src/stores/: auth.ts
koas-agent/: Cargo.toml  Dockerfile
koas-agent/src/: auth.rs  main.rs  models.rs
koas-agent/src/routes/: health.rs  mod.rs  ports.rs  resources.rs  services.rs
koas-api/: Cargo.toml
koas-api/src/: app.rs  auth.rs  error.rs  main.rs  state.rs
koas-api/src/routes/: health.rs  machines.rs  mod.rs  packages.rs  system.rs
koas-core/: Cargo.toml
koas-core/src/: config.rs  error.rs  lib.rs  os.rs
koas-core/src/machine/: manager.rs  types.rs
koas-core/src/service/: manager.rs  types.rs
koas-core/src/ssh/: auth.rs  session.rs  types.rs
koas-database/: Cargo.toml
koas-database/migrations/: 0001_create_servers.sql
koas-database/src/: lib.rs
koas-errors/: Cargo.toml
koas-errors/src/: lib.rs
koas-proxy/: Cargo.toml
koas-proxy/src/: handlers.rs  routes.rs
koas-server/: Cargo.toml  Dockerfile
koas-server/src/: main.rs
koas-servers/: Cargo.toml
koas-servers/src/application/: create_server.rs  delete_server.rs  get_server.rs  list_servers.rs  mod.rs
koas-servers/src/domain/: mod.rs  repository.rs  server.rs
koas-servers/src/infrastructure/http/: dto.rs  handlers.rs  routes.rs
koas-servers/src/infrastructure/persistence/: mod.rs  sqlite_server_repository.rs
koas-types/: Cargo.toml
koas-types/src/: lib.rs
scripts/: install.sh
web/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: index.css  main.tsx  router.tsx
web/src/apis/agent/: hooks.ts  service.ts  types.ts
web/src/apis/servers/: hooks.ts  index.ts  service.ts  types.ts
web/src/components/features/: PortTable.tsx  ResourceMetrics.tsx  ServerCard.tsx  ServiceTable.tsx
web/src/components/layout/: AppLayout.tsx
web/src/components/ui/: Badge.tsx  Card.tsx  StatCard.tsx  StatusDot.tsx  TimeTracker.tsx
web/src/libs/axios/: index.ts
web/src/routes/: dashboard.tsx  index.tsx  login.tsx  machines.new.tsx  machines.tsx  packages.tsx  servers.$serverId.ports.tsx  servers.$serverId.resources.tsx  servers.$serverId.services.tsx  servers.$serverId.tsx  servers.new.tsx  services.$name.tsx  services.tsx
web/src/routes/dashboard/_apis/: index.ts
