[workspace]
resolver = "2"
members = [
    "koas-agent",
    "koas-errors",
    "koas-types",
    "koas-database",
    "koas-servers",
    "koas-proxy",
    "koas-server",
]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
sysinfo = "0.33"
async-trait = "0.1"
dotenvy = "0.15"
