[package]
name = "koas-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "koas-agent"
path = "src/main.rs"

[dependencies]
koas-errors = { path = "../koas-errors" }
koas-types = { path = "../koas-types" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
dotenvy = { workspace = true }
