[package]
name = "koas-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "koas-api"
path = "src/main.rs"

[dependencies]
koas-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1"

[dev-dependencies]
axum-test = "17"
tokio-test = "0.4"
tempfile = "3"
