[package]
name = "koas-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
async-stream.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
regex.workspace = true
directories = "6.0"
russh = "0.57"
async-trait = "0.1"
home = "0.5"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
