[package]
name = "koas-servers"
version = "0.1.0"
edition = "2021"

[dependencies]
koas-errors = { path = "../koas-errors" }
koas-types = { path = "../koas-types" }
koas-database = { path = "../koas-database" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
