[package]
name = "koas-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "koas"
path = "src/main.rs"

[features]
embed-assets = ["rust-embed", "mime_guess"]

[dependencies]
koas-api.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
